# AgriSentinel

./: .dockerignore  .env.example  .gitignore  AgriSentinel_PROJECT_PLAN.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
agent/: __init__.py  dossier_agent.py
agent/prompts/: system_critic.md  system_drafter.md
agrisentinel/: __init__.py  cli.py  config.py  db.py  embeddings.py  geo.py  logging.py  raster.py  runs.py  seed.py  storage.py
api/: __init__.py  main.py  stream.py
config/: aoi_changhua.yaml
dashboard/: index.html
docker/: postgis.Dockerfile
ingestion/: __init__.py  labels_fetch.py  laws_fetch.py  parcels_load.py  stac_fetch.py
processing/: __init__.py  change_detect.py  evaluate.py  spark_tiles.py  zoning_join.py
report/: report.md  report.typ
scripts/: init_db.sql
scripts/demand/: disfactory_stats.py  survey_questions.md  tender_search.py
tests/: test_change_detect.py  test_config.py  test_embeddings.py  test_geo.py  test_ingestion.py  test_integration_db.py
