[project]
name = "agrisentinel"
version = "0.1.0"
description = "Automated detection of illegal factories on farmland + AI-generated enforcement dossiers (Big Data Systems final project, NTU)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "AgriSentinel" }]

# Core dependencies: everything needed to run the end-to-end pipeline with the
# CPU/numpy change detector and the lightweight TF-IDF+SVD embedder. Heavier,
# optional capabilities (deep-learning change detection, PySpark, plotting) live
# in the extras below so a grader's default `uv sync` stays light and fast.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "numpy>=1.26",
    "rasterio>=1.3",
    "shapely>=2.0",
    "pyproj>=3.6",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "boto3>=1.34",
    "kafka-python>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "scikit-learn>=1.4",
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
# Deep-learning change detection (torchgeo / segmentation-models) and
# transformer embeddings. The pipeline runs without these via the spectral
# (NDBI/NDVI) detector and the TF-IDF+SVD embedder.
ml = [
    "torch>=2.2",
    "torchgeo>=0.5",
    "segmentation-models-pytorch>=0.3",
    "sentence-transformers>=2.6",
]
# Distributed tiling/inference. A single-process fallback runs without Spark.
spark = ["pyspark>=3.5"]
# Demand-evidence collection scripts (Component 2).
demand = ["matplotlib>=3.8", "pandas>=2.2"]
# Developer tooling.
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
agrisentinel = "agrisentinel.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Multiple top-level packages mirroring the architecture layers (§3 of the plan).
packages = ["agrisentinel", "ingestion", "processing", "agent", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
